force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/zkmulti__MCQueued_Customs_Item__c.object-meta.xml
<CustomObject>
    <label>Return Line</label>
    <nameField>
        <displayFormat>Return Line-{0000000}</displayFormat>
        <label>Return Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>