force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__External_Variant_ID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__External_Variant_ID__c</fullName>
    <label>External Variant ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>