force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Product_Description_Long__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Product_Description_Long__c</fullName>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>