force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Product_Variant_Name__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Product_Variant_Name__c</fullName>
    <label>Product Variant Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>