force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Quantity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>