force-app/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Rejected_Date__c</fullName>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>